--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,18 @@
-[project]
+[tool.poetry]
 name = "exchanging-platform"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Vadim",email = "vadim.marakushin@gmail.com"}
-]
+authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "django (>=5.2.4,<6.0.0)",
-    "dotenv (>=0.9.9,<0.10.0)",
-    "psycopg2 (==2.9.10)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "pillow (>=11.3.0,<12.0.0)"
-]
+
+[tool.poetry.dependencies]
+python = "^3.12"
+django = "^5.2.4"
+dotenv = "^0.9.9"
+psycopg2-binary = "^2.9.10"
+pillow = "^11.3.0"
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
